--- a/BookNGo/Views/Home/About.cshtml
+++ b/BookNGo/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    CodeHub Project <br />
+    Name: BookNGo <br />
+    Language: English <br />
+    Contributors: George Kara ,Meletis Papadopoulos ,Maria Kritou ,Kwstas Petsinas
+</p>
