--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -23,6 +23,12 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("User", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Category", "Index", "Categories")</li>
+                    <li>@Html.ActionLink("Feature", "Index", "Features")</li>
+                    <li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>
+                    <li>@Html.ActionLink("Location", "Index", "Locations")</li>
+                    <li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
