--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("User", "Index", "Users")</li>
+                    <li>@Html.ActionLink("House", "Index", "Houses")</li>
                     <li>@Html.ActionLink("Category", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Feature", "Index", "Features")</li>
                     <li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>
