+search occupancy, index user ++

--- a/BookNGo/Views/Houses/Delete.cshtml
+++ b/BookNGo/Views/Houses/Delete.cshtml
@@ -51,6 +51,14 @@
             @Html.DisplayFor(model => model.PricePerNight)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.LocationId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LocationId)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
