--- a/BookNGo/Views/Houses/Details.cshtml
+++ b/BookNGo/Views/Houses/Details.cshtml
@@ -50,6 +50,21 @@
             @Html.DisplayFor(model => model.PricePerNight)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Category)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Category)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Location)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Location)
+        </dd>
     </dl>
 </div>
 <p>
