--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     @*@Html.ActionLink("Create New", "Create")*@
-    @using (Html.BeginForm("Index", "HouseSearch", FormMethod.Get))
+    @using (Html.BeginForm("Index", "Home", FormMethod.Get))
     {
         <input type="text" name="title" placeholder="Enter House Title" />
         <input type="text" name="occupancy" placeholder="Enter Occupancy" />
