--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -24,12 +24,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("House", "Index", "Houses")</li>
-                    <li>@Html.ActionLink("Category", "Index", "Categories")</li>
-                    <li>@Html.ActionLink("Image", "Index", "Images")</li>
-                    <li>@Html.ActionLink("Feature", "Index", "Features")</li>
-                    <li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>
                     <li>@Html.ActionLink("Location", "Index", "Locations")</li>
-                    <li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>
+                    <li>@Html.ActionLink("Category", "Index", "Categories")</li>
+                    <li>@Html.ActionLink("Feature", "Index", "Features")</li>
+                    @*<li>@Html.ActionLink("Image", "Index", "Images")</li>*@
+                    @*<li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>*@
+                    @*<li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
