--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -7,11 +7,12 @@
 <h2>Index</h2>
 
 <p>
-    @*@Html.ActionLink("Create New", "Create")*@
     @using (Html.BeginForm("Index", "Home", FormMethod.Get))
     {
         <input type="text" name="title" placeholder="Enter House Title" />
         <input type="text" name="occupancy" placeholder="Enter Occupancy" />
+        @Html.DropDownList("Location", null, htmlAttributes: new { @class = "form-control" })
+        @Html.DropDownList("Category", null, htmlAttributes: new { @class = "form-control" })
         <input type="submit" name="submit" value="Search" />
     }
 </p>
@@ -32,33 +33,44 @@
         <th>
             @Html.DisplayNameFor(model => model.PricePerNight)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Location)
+        </th>
+
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaxOccupancy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PricePerNight)
-            </td>
-            @*<td>
-                    @Html.ActionLink("Edit", "Edit", new { id=item.HouseId }) |
-                    @Html.ActionLink("Details", "Details", new { id=item.HouseId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id=item.HouseId })
-                </td>*@
-        </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Address)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.MaxOccupancy)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PricePerNight)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Category.CategoryName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Location.LocationName)
+        </td>
+        <td>
+            @Html.ActionLink("Details", "Details", new { id = item.HouseId })
+        </td>
+    </tr>
     }
 
 </table>
