--- a/BookNGo/Views/Houses/Index.cshtml
+++ b/BookNGo/Views/Houses/Index.cshtml
@@ -53,7 +53,7 @@
                 @Html.DisplayFor(modelItem => item.PricePerNight)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category)
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Location.LocationName)
