change views and little controllers

--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -27,9 +27,12 @@
                     <li>@Html.ActionLink("Location", "Index", "Locations")</li>
                     <li>@Html.ActionLink("Category", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Feature", "Index", "Features")</li>
+                    <li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>
+                    <li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>
+                    <li>@Html.ActionLink("Profile", "Details", "Users")</li>
                     @*<li>@Html.ActionLink("Image", "Index", "Images")</li>*@
-                    @*<li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>*@
-                    @*<li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>*@
+
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
