--- a/BookNGo/Views/Users/Edit.cshtml
+++ b/BookNGo/Views/Users/Edit.cshtml
@@ -51,10 +51,12 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(m => m.Gender, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+            @Html.DropDownList("gender", new SelectList(new List<SelectListItem>() {
+                new SelectListItem(){Text="Male", Value="Male"},
+                new SelectListItem(){Text="Female", Value="Female"}
+                }, "Value", "Text", "..Select.."))
         </div>
     </div>
 
@@ -66,11 +68,19 @@
         </div>
     </div>
 
+    <<div class="form-group">
+    @Html.LabelFor(m => m.DateOfBirth, new { @class = "col-md-2 control-label" })
+         <div class="col-md-10">
+             @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "form-control", type = "date" })
+             @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
+         </div>
+</div>
+
     <div class="form-group">
-        @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Location, "Location", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
+            @Html.DropDownList("LocationId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -83,7 +93,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Details")
 </div>
 
 @section Scripts {
