--- a/BookNGo/Views/Reservations/Index.cshtml
+++ b/BookNGo/Views/Reservations/Index.cshtml
@@ -7,10 +7,13 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Book It New", "BookIt")
 </p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.House.Title)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.StartDate)
         </th>
@@ -29,11 +32,17 @@
         <th>
             @Html.DisplayNameFor(model => model.PriceCharged)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ApplicationUserId)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.House.Title)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.StartDate)
         </td>
@@ -51,6 +60,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PriceCharged)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ApplicationUserId)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ReservationId }) |
