--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>
                     <li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>
                     <li>@Html.ActionLink("Profile", "Details", "Users")</li>
+                    <li>@Html.ActionLink("My House", "MyHouses", "Houses")</li>
                     @*<li>@Html.ActionLink("Image", "Index", "Images")</li>*@
 
 
