edit search form

--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -11,9 +11,11 @@
     {
         <input type="text" name="title" placeholder="Enter House Title" />
         <input type="text" name="occupancy" placeholder="Enter Occupancy" />
-        @Html.DropDownList("Location", (SelectList)ViewBag.Location , "Please select", htmlAttributes: new { @class = "form-control" })
+        @Html.DropDownList("Location", (SelectList)ViewBag.Location, "Please select", htmlAttributes: new { @class = "form-control" })
         @Html.DropDownList("Category", (SelectList)ViewBag.Category, "Please select", htmlAttributes: new { @class = "form-control" })
-        <input type="submit" name="submit" value="Search" />
+        @Html.TextBox("Start Date", "", new { @class = "form-control", type = "date" })
+        @Html.TextBox("End Date", "", new { @class = "form-control", type = "date" })
+        <input type="submit" name="submit" value="Search" class="btn btn-default" />
     }
 </p>
 <table class="table">
