--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>
                     <li>@Html.ActionLink("Profile", "Details", "Users")</li>
                     <li>@Html.ActionLink("My House", "MyHouses", "Houses")</li>
+                    <li>@Html.ActionLink("My Reservation", "MyReservations", "Reservations")</li>
                     @*<li>@Html.ActionLink("Image", "Index", "Images")</li>*@
 
 
