--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -29,9 +29,9 @@
                     <li>@Html.ActionLink("Feature", "Index", "Features")</li>
                     <li>@Html.ActionLink("Availability", "Index", "Availabilities")</li>
                     <li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>
-                    <li>@Html.ActionLink("Profile", "Details", "Users")</li>
-                    <li>@Html.ActionLink("My House", "MyHouses", "Houses")</li>
-                    <li>@Html.ActionLink("My Reservation", "MyReservations", "Reservations")</li>
+                    @*<li>@Html.ActionLink("Profile", "Details", "Users")</li>*@
+                    @*<li>@Html.ActionLink("My House", "MyHouses", "Houses")</li>*@
+                    @*<li>@Html.ActionLink("My Reservation", "MyReservations", "Reservations")</li>*@
                     @*<li>@Html.ActionLink("Image", "Index", "Images")</li>*@
 
 
