--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -78,5 +78,8 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Delete", "Delete", new { id = Model.Id })
+    @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
+    @Html.ActionLink("My House", "MyHouses", "Houses") |
+    @Html.ActionLink("My Reservation", "MyReservations", "Reservations") |
+    @Html.ActionLink("Change your password", "ChangePassword", "Manage")
 </p>
