change search + second example

--- a/BookNGo/Views/Home/AdminPage.cshtml
+++ b/BookNGo/Views/Home/AdminPage.cshtml
@@ -1,7 +1,15 @@
-﻿<p>
-
+﻿<div>
     @Html.ActionLink("Location", "Index", "Locations")
+</div>
+<div>
     @Html.ActionLink("Category", "Index", "Categories")
+</div>
+<div>
     @Html.ActionLink("Feature", "Index", "Features")
-
-</p>
+</div>
+<div>
+    @Html.ActionLink("Availability", "Index", "Availabilities")
+</div>
+<div>
+    @Html.ActionLink("Reservation", "Index", "Reservations")
+</div>
