--- a/BookNGo/Views/Home/Details.cshtml
+++ b/BookNGo/Views/Home/Details.cshtml
@@ -68,6 +68,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.HouseId }) |
+    @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = Model.HouseId }, null) |
     @Html.ActionLink("Back to List", "Index")
 </p>
