--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -4,17 +4,17 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Search</h2>
 
 <p>
     @using (Html.BeginForm("Index", "Home", FormMethod.Get))
     {
-        <input type="text" name="title" placeholder="Enter House Title" />
-        <input type="text" name="occupancy" placeholder="Enter Occupancy" />
+
         @Html.DropDownList("Location", (SelectList)ViewBag.Location, "Please select", htmlAttributes: new { @class = "form-control" })
         @Html.DropDownList("Category", (SelectList)ViewBag.Category, "Please select", htmlAttributes: new { @class = "form-control" })
         @Html.TextBox("Start Date", "", new { @class = "form-control", type = "date" })
         @Html.TextBox("End Date", "", new { @class = "form-control", type = "date" })
+        <input type="text" name="occupancy" placeholder="Enter Occupancy" />
         <input type="submit" name="submit" value="Search" class="btn btn-default" />
     }
 </p>
@@ -70,7 +70,7 @@
             @Html.DisplayFor(modelItem => item.Location.LocationName)
         </td>
         <td>
-            @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null);
+            @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null) |
             @Html.ActionLink("Details", "Details", new { id = item.HouseId })
         </td>
     </tr>
