--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -4,18 +4,44 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Search</h2>
-
 <p>
     @using (Html.BeginForm("Index", "Home", FormMethod.Get))
     {
 
-        @Html.DropDownList("Location", (SelectList)ViewBag.Location, "Please select", htmlAttributes: new { @class = "form-control" })
-        @Html.DropDownList("Category", (SelectList)ViewBag.Category, "Please select", htmlAttributes: new { @class = "form-control" })
-        @Html.TextBox("Start Date", "", new { @class = "form-control", type = "date" })
-        @Html.TextBox("End Date", "", new { @class = "form-control", type = "date" })
-        <input type="text" name="occupancy" placeholder="Enter Occupancy" />
-        <input type="submit" name="submit" value="Search" class="btn btn-default" />
+    <div class="form-horizontal">
+        <h2>Search</h2>
+        <hr/>
+        <div class="col-md-2">
+            @Html.DisplayName("Start Date:")
+            @Html.TextBox("startDate", "", new { @class = "form-control", type = "date" })
+        </div>
+
+        <div class="col-md-2">
+            @Html.DisplayName("End Date:")
+            @Html.TextBox("endDate", "", new { @class = "form-control", type = "date" })
+        </div>
+
+        <div class="col-md-2">
+            @Html.DisplayName("Location:")
+            @Html.DropDownList("location", (SelectList)ViewBag.Location, "Please select", htmlAttributes: new { @class = "form-control" })
+        </div>
+
+        <div class="col-md-2">
+            @Html.DisplayName("Category:")
+            @Html.DropDownList("category", (SelectList)ViewBag.Category, "Please select", htmlAttributes: new { @class = "form-control" })
+        </div>
+
+        <div class="col-md-2">
+            @Html.DisplayName("Max Occupancy:")
+            @Html.Editor("occupancy", new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+
+        <div class="col-md-2">
+            @Html.DisplayName("Click And Find Your Home!")
+            <input type="submit" value="Search" class="btn btn-default" />
+        </div>
+
+    </div>
     }
 </p>
 <table class="table">
