fix MyHouses and MyReservations

--- a/BookNGo/Views/Houses/MyHouses.cshtml
+++ b/BookNGo/Views/Houses/MyHouses.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<BookNGo.Models.House>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "MyHouses";
 }
 
-<h2>Index</h2>
+<h2>My Houses</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
