--- a/BookNGo/Views/Reservations/MyReservations.cshtml
+++ b/BookNGo/Views/Reservations/MyReservations.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<BookNGo.Models.Reservation>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "MyReservations";
 }
 
-<h2>Index</h2>
+<h2>My Reservations</h2>
 
 <table class="table">
     <tr>
