fix search algorithm, add back in admin page and fix problem in memberteam

--- a/BookNGo/Views/Features/Index.cshtml
+++ b/BookNGo/Views/Features/Index.cshtml
@@ -25,9 +25,12 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.FeatureId }) |
             @Html.ActionLink("Details", "Details", new { id=item.FeatureId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.FeatureId })
+            @Html.ActionLink("Delete", "Delete", new { id=item.FeatureId }) 
         </td>
     </tr>
 }
 
 </table>
+<div>
+    @Html.ActionLink("Back", "AdminPage", "Home")
+</div>
