--- a/BookNGo/Views/Locations/Index.cshtml
+++ b/BookNGo/Views/Locations/Index.cshtml
@@ -25,9 +25,12 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.LocationId }) |
             @Html.ActionLink("Details", "Details", new { id=item.LocationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.LocationId })
+            @Html.ActionLink("Delete", "Delete", new { id=item.LocationId }) 
         </td>
     </tr>
 }
 
 </table>
+<div>
+    @Html.ActionLink("Back", "AdminPage", "Home")
+</div>
