--- a/BookNGo/Views/Home/AdminPage.cshtml
+++ b/BookNGo/Views/Home/AdminPage.cshtml
@@ -1,4 +1,10 @@
-﻿<div>
+﻿@{
+    ViewBag.Title = "Admin Page";
+}
+
+<h2>Admin Page</h2>
+
+<div>
     @Html.ActionLink("Location", "Index", "Locations")
 </div>
 <div>
