--- a/BookNGo/Views/Home/AdminPage.cshtml
+++ b/BookNGo/Views/Home/AdminPage.cshtml
@@ -16,3 +16,6 @@
 <div>
     @Html.ActionLink("Reservation", "Index", "Reservations")
 </div>
+<div>
+    @Html.ActionLink("House", "Index", "Houses")
+</div>
