--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,24 +17,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("BookNGo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <!-- Add the Logo code here -->
+                <div>
+                    <a class="navbar-brand" href="/Home/Index">
+                        <img src="~/Image/Logo.png" alt="Logo" />
+                    </a>
+                </div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("House", "Index", "Houses")</li>
                     <li>@Html.ActionLink("Admin Page", "AdminPage", "Home")</li>
-                    @*<li>@Html.ActionLink("Location", "Index", "Locations")</li>*@
-                    @*<li>@Html.ActionLink("Category", "Index", "Categories")</li>*@
-                    @*<li>@Html.ActionLink("Feature", "Index", "Features")</li>*@
-                    @*<li>@Html.ActionLink("Reservation", "Index", "Reservations")</li>*@
-                    @*<li>@Html.ActionLink("Profile", "Details", "Users")</li>*@
-                    @*<li>@Html.ActionLink("My House", "MyHouses", "Houses")</li>*@
-                    @*<li>@Html.ActionLink("My Reservation", "MyReservations", "Reservations")</li>*@
-                    @*<li>@Html.ActionLink("Image", "Index", "Images")</li>*@
-
-
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -44,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - BookNGo</p>
         </footer>
     </div>
 
