--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -4,46 +4,38 @@
     ViewBag.Title = "Index";
 }
 
-<p>
-    @using (Html.BeginForm("Index", "Home", FormMethod.Get))
-    {
+@using (Html.BeginForm("Index", "Home", FormMethod.Get))
+{
+    <form>
+        <h2>Search for houses</h2>
+        <hr />
 
-    <div class="form-horizontal">
-        <h2>Search</h2>
-        <hr/>
-        <div class="col-md-2">
-            @Html.DisplayName("Start Date:")
+        <div class="form-group">
+            @Html.Label("startDate", "Arrival:")
             @Html.TextBox("startDate", "", new { @class = "form-control", type = "date" })
         </div>
-
-        <div class="col-md-2">
-            @Html.DisplayName("End Date:")
+        <div class="form-group">
+            @Html.Label("endDate", "Departure:")
             @Html.TextBox("endDate", "", new { @class = "form-control", type = "date" })
         </div>
-
-        <div class="col-md-2">
-            @Html.DisplayName("Location:")
-            @Html.DropDownList("location", (SelectList)ViewBag.Location, "Please select", htmlAttributes: new { @class = "form-control" })
+        <div class="form-group">
+            @Html.Label("location", "Location:")
+            @Html.DropDownList("location", (SelectList)ViewBag.Location, "Select your location", htmlAttributes: new { @class = "form-control" })
         </div>
-
-        <div class="col-md-2">
-            @Html.DisplayName("Category:")
-            @Html.DropDownList("category", (SelectList)ViewBag.Category, "Please select", htmlAttributes: new { @class = "form-control" })
+        <div class="form-group">
+            @Html.Label("category", "Category:")
+            @Html.DropDownList("category", (SelectList)ViewBag.Category, "Select a category", htmlAttributes: new { @class = "form-control" })
         </div>
-
-        <div class="col-md-2">
-            @Html.DisplayName("Max Occupancy:")
-            @Html.Editor("occupancy", new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            @Html.Label("visitors", "Visitors:")
+            @Html.TextBox("occupancy", "", new { @class = "form-control", placeholder = "Number of visitors" })
         </div>
-
-        <div class="col-md-2">
-            @Html.DisplayName("Click And Find Your Home!")
-            <input type="submit" value="Search" class="btn btn-default" />
+        <div class="form-group">
+            <input type="submit" value="Find your house" class="btn btn-primary" />
         </div>
+    </form>
+}
 
-    </div>
-    }
-</p>
 <table class="table">
     <tr>
         <th>
@@ -73,33 +65,33 @@
 
     @foreach (var item in Model)
     {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaxOccupancy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PricePerNight)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category.CategoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Location.LocationName)
-        </td>
-        <td>
-            @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null) |
-            @Html.ActionLink("Details", "Details", new { id = item.HouseId })
-        </td>
-    </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MaxOccupancy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PricePerNight)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location.LocationName)
+            </td>
+            <td>
+                @Html.ActionLink("Book It", "BookIt", "Reservations", new { houseId = item.HouseId }, null) |
+                @Html.ActionLink("Details", "Details", new { id = item.HouseId })
+            </td>
+        </tr>
     }
 
 </table>
