--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Profile</h2>
 
 <div>
-    <h4>ApplicationUser</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -81,5 +80,6 @@
     @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
     @Html.ActionLink("My House", "MyHouses", "Houses") |
     @Html.ActionLink("My Reservation", "MyReservations", "Reservations") |
+    @Html.ActionLink("New House", "Create", "Houses") |
     @Html.ActionLink("Change your password", "ChangePassword", "Manage")
 </p>
