--- a/BookNGo/Views/Houses/Create.cshtml
+++ b/BookNGo/Views/Houses/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BookNGo.Models.House
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create House";
 }
 
-<h2>Create</h2>
+<h2>Create House</h2>
 
 
 @using (Html.BeginForm("Create", "Houses", FormMethod.Post, new { enctype = "multipart/form-data" }))
