--- a/BookNGo/Views/Houses/Delete.cshtml
+++ b/BookNGo/Views/Houses/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BookNGo.Models.House
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete House";
 }
 
-<h2>Delete</h2>
+<h2>Delete House</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -66,7 +66,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "MyHouses", "Houses")
         </div>
     }
 </div>
