--- a/BookNGo/Views/Houses/Details.cshtml
+++ b/BookNGo/Views/Houses/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BookNGo.Models.House
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details House";
 }
 
-<h2>Details</h2>
+<h2>Details House</h2>
 
 <div>
     <h4>House</h4>
