--- a/BookNGo/Views/Reservations/Details.cshtml
+++ b/BookNGo/Views/Reservations/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BookNGo.Models.Reservation
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details For Your Reservation";
 }
 
-<h2>Details</h2>
+<h2>Details For Your Reservation</h2>
 
 <div>
     <h4>Reservation</h4>
@@ -77,5 +77,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to My Reservations", "MyReservations", "Reservations")
 </p>
