--- a/BookNGo/Views/Reservations/MyHouseReservations.cshtml
+++ b/BookNGo/Views/Reservations/MyHouseReservations.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<BookNGo.Models.Reservation>
 
 @{
-    ViewBag.Title = "My Reservations";
+    ViewBag.Title = "My House Reservations";
 }
 
-<h2>My Reservations</h2>
+<h2>My House Reservations</h2>
 
 <table class="table">
     <tr>
@@ -62,8 +62,8 @@
             @Html.DisplayFor(modelItem => item.ApplicationUserId)
         </td>
         <td>
-            @Html.ActionLink("Details Reservation", "Details", new { id=item.ReservationId }) |
-            @Html.ActionLink("Cancel Reservation", "Delete", new { id=item.ReservationId })
+            @Html.ActionLink("Details Reservation", "Details", new { id=item.ReservationId }) @*|
+            @Html.ActionLink("Cancel Reservation", "Delete", new { id=item.ReservationId })*@
         </td>
     </tr>
 }
