--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -76,10 +76,11 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Delete", "Delete", new { id = Model.Id }) |
+    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id }) |
     @Html.ActionLink("My House", "MyHouses", "Houses") |
     @Html.ActionLink("My Reservation", "MyReservations", "Reservations") |
+    @Html.ActionLink("My House Reservation", "MyHouseReservations", "Reservations") |
     @Html.ActionLink("New House", "Create", "Houses") |
     @Html.ActionLink("Change your password", "ChangePassword", "Manage")
 </p>
