--- a/BookNGo/Views/Houses/Create.cshtml
+++ b/BookNGo/Views/Houses/Create.cshtml
@@ -72,6 +72,10 @@
         </div>
 
         <div class="form-group">
+            <input type="file" name="Image" required />
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
