--- a/BookNGo/Views/Home/About.cshtml
+++ b/BookNGo/Views/Home/About.cshtml
@@ -1,12 +1,136 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Our Gang of 4";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+@*<h3>@ViewBag.Message</h3>*@
 
-<p>
-    CodeHub Project <br />
-    Name: BookNGo <br />
-    Language: English <br />
-    Contributors: George Kara ,Meletis Papadopoulos ,Maria Kritou ,Kwstas Petsinas
-</p>
+<!------ Include the above in your HEAD tag ---------->
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+    <div class="row">
+        <!-- 1st Member Card -->
+        <div class="col-lg-3 col-sm-6">
+            <div class="card hovercard">
+                <div class="cardheader">
+                </div>
+                <div class="avatar">
+                    <img src="~/Image/George.jpg" />
+                </div>
+                <div class="info">
+                    <div class="title">
+                        <h3 style="color: darkblue;">George Karanikolas</h3>
+                    </div>
+                    <div class="desc">Passionate about software</div>
+                    <div class="desc">Junior Web Developer</div>
+                    <div class="desc"></div>
+                </div>
+                <div class="bottom">
+                    <a class="btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac"><i class="fa fa-twitter"></i></a>
+                    <a class="btn-cards btn-danger btn-sm" rel="publisher" href="https://plus.google.com/+ahmshahnuralam"><i class="fa fa-google-plus"></i></a>
+                    <a class="btn-cards btn-primary btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam"><i class="fa fa-facebook"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- 2nd Card Member -->
+        <div class="col-lg-3 col-sm-6">
+            <div class="card hovercard">
+                <div class="cardheader">
+                </div>
+                <div class="avatar">
+                    <img src="~/Image/Maria.jpg" />
+                </div>
+                <div class="info">
+                    <div class="title">
+                        <a href="https://scripteden.com/">Maria Kritou</a>
+                    </div>
+                    <div class="desc">Junior Web Developer</div>
+                    <div class="desc">Team Leader</div>
+                </div>
+                <div class="bottom">
+                    <a class="btn-cards btn-primary btn-twitter btn-sm .btn-cards" href="https://twitter.com/webmaniac">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="btn-cards btn-danger btn-sm" rel="publisher"
+                       href="https://plus.google.com/+ahmshahnuralam">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                    <a class="btn-cards btn-primary btn-sm" rel="publisher"
+                       href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-behance"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- 3rd Member Card -->
+        <div class="col-lg-3 col-sm-6">
+            <div class="card hovercard">
+                <div class="cardheader">
+                </div>
+                <div class="avatar">
+                    <img src="~/Image/Kostas.jpg" />
+                </div>
+                <div class="info">
+                    <div class="title">
+                        <a target="_blank" href="https://scripteden.com/">Script Eden</a>
+                    </div>
+                    <div class="desc">Passionate designer</div>
+                    <div class="desc">Curious developer</div>
+                    <div class="desc">Tech geek</div>
+                </div>
+                <div class="bottom">
+                    <a class="btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="btn-cards btn-danger btn-sm" rel="publisher"
+                       href="https://plus.google.com/+ahmshahnuralam">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                    <a class="btn-cards btn-primary btn-sm" rel="publisher"
+                       href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-behance"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- 4th Member Card -->
+        <div class="col-lg-3 col-sm-6">
+            <div class="card hovercard">
+                <div class="cardheader">
+                </div>
+                <div class="avatar">
+                    <img src="~/Image/Meletis.jpg" alt="The Master" />
+                </div>
+                <div class="info">
+                    <div class="title">
+                        <a target="_blank" href="https://scripteden.com/">Script Eden</a>
+                    </div>
+                    <div class="desc">Passionate designer</div>
+                    <div class="desc">Curious developer</div>
+                    <div class="desc">Tech geek</div>
+                </div>
+                <div class="bottom">
+                    <a class="btn-cards btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="btn-cards btn-danger btn-sm" rel="publisher"
+                       href="https://plus.google.com/+ahmshahnuralam">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                    <a class="btn-cards btn-primary btn-sm" rel="publisher"
+                       href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="btn-cards btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
+                        <i class="fa fa-behance"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
