--- a/BookNGo/Content/Site.css
+++ b/BookNGo/Content/Site.css
@@ -1,13 +1,10 @@
-﻿body {
+﻿/* Custom Styles */
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
-    color: black;
-    /* Fonts */
-    font-family: 'Roboto', 'Open Sans', 'Lato', sans-serif;
-    /* Code for the Gradient */
-    background: #43C6AC; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #F8FFAE, #43C6AC); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #F8FFAE, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /* Google Fonts */
+    font-family: 'Roboto', 'Open Sans', 'Lato', sans-serif, serif;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -30,57 +27,284 @@ textarea {
     max-width: 280px;
 }
 
-/* Responsive menu button */
-button.navbar-toggle {
-    /* Code for the gradient */
-    background: #525252; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #3d72b4, #525252); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #3d72b4, #525252); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-span.icon-bar {
-    /* Code for the gradient */
-    background: #8e9eab; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
 .navbar {
-    border-width: 0px !important;
-    border-top: 2px solid rgb(63,94,251) !important;
-    border-bottom: 2px solid rgb(63,94,251) !important;
-    /* opacity: 0.5; */
-    /* Code for the Gradient */
-    background: #A1FFCE; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FAFFD1, #A1FFCE); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FAFFD1, #A1FFCE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-top: 2px solid #2980B9;
+    border-bottom: 2px solid #2980B9;
 }
 
-.navbar-brand > img {
-    width: 100px;
-    height: 60px;
-    padding-bottom: 10px;
-}
-
-a.navbar-brand {
-    margin: 0; 
+.navbar-brand {
     padding: 0;
-}
-
-.nav > li {
     margin: 0;
-    padding: 0;
 }
 
-.nav > li > a {
-    color: black;
+a.navbar-brand > img {
+    padding: 5px 20px;
 }
 
-.nav > li > a:hover {
-    color: cadetblue;
+.navbar-nav > li > a {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-size: initial;
+}
+
+ul.nav > li > a:hover {
     font-weight: bold;
 }
 
-hr {
-    border: 1px solid #093028;
+.btn {
+    text-align: center;
+    font-weight: bold;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+/* Code for the Cards */
+.card {
+    padding-top: 20px;
+    margin: 10px 0 20px 0;
+    background-color: rgba(214, 224, 226, 0.2);
+    border-top-width: 0;
+    border-bottom-width: 2px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+    .card .card-heading {
+        padding: 0 20px;
+        margin: 0;
+    }
+
+        .card .card-heading.simple {
+            font-size: 20px;
+            font-weight: 300;
+            color: #777;
+            border-bottom: 1px solid #e5e5e5;
+        }
+
+        .card .card-heading.image img {
+            display: inline-block;
+            width: 46px;
+            height: 46px;
+            margin-right: 15px;
+            vertical-align: top;
+            border: 0;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            border-radius: 50%;
+        }
+
+        .card .card-heading.image .card-heading-header {
+            display: inline-block;
+            vertical-align: top;
+        }
+
+            .card .card-heading.image .card-heading-header h3 {
+                margin: 0;
+                font-size: 14px;
+                line-height: 16px;
+                color: #262626;
+            }
+
+            .card .card-heading.image .card-heading-header span {
+                font-size: 12px;
+                color: #999999;
+            }
+
+    .card .card-body {
+        padding: 0 20px;
+        margin-top: 20px;
+    }
+
+    .card .card-media {
+        padding: 0 20px;
+        margin: 0 -14px;
+    }
+
+        .card .card-media img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+
+    .card .card-actions {
+        min-height: 30px;
+        padding: 0 20px 20px 20px;
+        margin: 20px 0 0 0;
+    }
+
+    .card .card-comments {
+        padding: 20px;
+        margin: 0;
+        background-color: #f8f8f8;
+    }
+
+        .card .card-comments .comments-collapse-toggle {
+            padding: 0;
+            margin: 0 20px 12px 20px;
+        }
+
+            .card .card-comments .comments-collapse-toggle a,
+            .card .card-comments .comments-collapse-toggle span {
+                padding-right: 5px;
+                overflow: hidden;
+                font-size: 12px;
+                color: #999;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+
+.card-comments .media-heading {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.card.people {
+    position: relative;
+    display: inline-block;
+    width: 170px;
+    height: 300px;
+    padding-top: 0;
+    margin-left: 20px;
+    overflow: hidden;
+    vertical-align: top;
+}
+
+    .card.people:first-child {
+        margin-left: 0;
+    }
+
+    .card.people .card-top {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-block;
+        width: 170px;
+        height: 150px;
+        background-color: #ffffff;
+    }
+
+        .card.people .card-top.green {
+            background-color: #53a93f;
+        }
+
+        .card.people .card-top.blue {
+            background-color: #427fed;
+        }
+
+    .card.people .card-info {
+        position: absolute;
+        top: 150px;
+        display: inline-block;
+        width: 100%;
+        height: 101px;
+        overflow: hidden;
+        background: #ffffff;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+        .card.people .card-info .title {
+            display: block;
+            margin: 8px 14px 0 14px;
+            overflow: hidden;
+            font-size: 16px;
+            font-weight: bold;
+            line-height: 18px;
+            color: #404040;
+        }
+
+        .card.people .card-info .desc {
+            display: block;
+            margin: 8px 14px 0 14px;
+            overflow: hidden;
+            font-size: 12px;
+            line-height: 16px;
+            color: #737373;
+            text-overflow: ellipsis;
+        }
+
+    .card.people .card-bottom {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        display: inline-block;
+        width: 100%;
+        padding: 10px 20px;
+        line-height: 29px;
+        text-align: center;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+.card.hovercard {
+    position: relative;
+    padding-top: 0;
+    overflow: hidden;
+    text-align: center;
+    background-color: rgba(214, 224, 226, 0.2);
+}
+
+    .card.hovercard .cardheader {
+        background-image: url('../Image/BackgroundImage.jpeg');
+        background-size: cover;
+        height: 135px;
+    }
+
+    .card.hovercard .avatar {
+        position: relative;
+        top: -50px;
+        margin-bottom: -50px;
+    }
+
+        .card.hovercard .avatar img {
+            width: 100px;
+            height: 100px;
+            max-width: 100px;
+            max-height: 100px;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            border-radius: 50%;
+            border: 5px solid rgba(255,255,255,0.5);
+        }
+
+    .card.hovercard .info {
+        padding: 4px 8px 10px;
+    }
+
+        .card.hovercard .info .title {
+            margin-bottom: 4px;
+            font-size: 24px;
+            line-height: 1;
+            color: #262626;
+            vertical-align: middle;
+        }
+
+        .card.hovercard .info .desc {
+            overflow: hidden;
+            font-size: 12px;
+            line-height: 20px;
+            color: #737373;
+            text-overflow: ellipsis;
+        }
+
+    .card.hovercard .bottom {
+        padding: 0 20px;
+        margin-bottom: 17px;
+    }
+
+.btn-cards {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    line-height: 18px;
 }
