--- a/BookNGo/Views/Home/AdminPage.cshtml
+++ b/BookNGo/Views/Home/AdminPage.cshtml
@@ -4,18 +4,46 @@
 
 <h2>Admin Page</h2>
 
-<div>
-    @Html.ActionLink("Location", "Index", "Locations")
+<div class="container-fluid text-justify">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-1 col-md-2 no-padding ">
+                <!-- Location Button -->
+                @Html.ActionLink("Location", "Index", "Locations", null, new { @class = "btn btn-primary btn-block btn-large" })
+            </div>
+            <div class="col-md-2 no-padding">
+                <!-- Category Button -->
+                @Html.ActionLink("Category", "Index", "Categories", null, new { @class = "btn btn-success btn-block btn-large" })
+            </div>
+            <div class="col-md-2 no-padding">
+                <!-- Feature Button -->
+                @Html.ActionLink("Feature", "Index", "Features", null, new { @class = "btn btn-info btn-block btn-large" })
+
+            </div>
+            <div class="col-md-2 no-padding">
+                <!-- Reservation Button -->
+                @Html.ActionLink("Reservation", "Index", "Reservations", null, new { @class = "btn btn-warning btn-block btn-large" })
+            </div>
+            <div class="col-md-2 no-padding">
+                <!-- House Button -->
+                @Html.ActionLink("House", "Index", "Houses", null, new { @class = "btn btn-danger btn-block btn-large" })
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    @Html.ActionLink("Category", "Index", "Categories")
-</div>
-<div>
-    @Html.ActionLink("Feature", "Index", "Features")
-</div>
-<div>
-    @Html.ActionLink("Reservation", "Index", "Reservations")
-</div>
-<div>
-    @Html.ActionLink("House", "Index", "Houses")
-</div>
+
+@*<div>
+        @Html.ActionLink("Location", "Index", "Locations")
+    </div>
+    <div>
+        @Html.ActionLink("Category", "Index", "Categories")
+    </div>
+    <div>
+        @Html.ActionLink("Feature", "Index", "Features")
+    </div>
+    <div>
+        @Html.ActionLink("Reservation", "Index", "Reservations")
+    </div>
+    <div>
+        @Html.ActionLink("House", "Index", "Houses")
+    </div>*@
