--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -6,10 +6,11 @@
     <title>@ViewBag.Title - BookNGo</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
-    <div class="navbar navbar-fixed-top">
+    <br />
+    <br />
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,26 +18,33 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- Add the Logo code here -->
-                <div>
-                    <a class="navbar-brand" href="/Home/Index">
-                        <img src="~/Image/Logo.png" alt="Logo" />
-                    </a>
-                </div>
+                <!-- Logo Code -->
+                <a class="navbar-brand" href="/Home/Index">
+                    <img src="~/Image/Logo.png" alt="BookNGo Logo" />
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    @if(User.IsInRole("Admin"))
+                    <li>@Html.ActionLink("Our Team", "About", "Home")</li>
+                    @* Only appear admin panel if case is true *@
+                    @if (User.IsInRole("Admin"))
                     {
                         <li>@Html.ActionLink("Admin Page", "AdminPage", "Home")</li>
                     }
-                    </ul>
+
+                    @* Added Code *@
+                    @if (User.IsInRole("Admin") || User.IsInRole("Owner"))
+                    {
+                        <li>@Html.ActionLink("My House", "MyHouses", "Houses")</li>
+                    }
+                    <li>@Html.ActionLink("My Reservation", "MyReservations", "Reservations")</li>
+                </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
