--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -76,17 +76,8 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id })
-    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id })
-    @if (User.IsInRole("Admin") || User.IsInRole("Owner"))
-    {
-        @Html.ActionLink("My House", "MyHouses", "Houses")
-    }
-    @Html.ActionLink("My Reservation", "MyReservations", "Reservations")
-    @if (User.IsInRole("Admin") || User.IsInRole("Owner"))
-    {
-        @Html.ActionLink("My House Reservation", "MyHouseReservations", "Reservations")
-    }
-    @Html.ActionLink("New House", "Create", "Houses")
-    @Html.ActionLink("Change your password", "ChangePassword", "Manage")
+
+    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id }, new { @class = "btn btn-success " })
+    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
+    @Html.ActionLink("Change your password", "ChangePassword", "Manage", new { @class = "btn btn-warning" })
 </p>
